--- a/frontend/src/app/tournament/leaderboard/leaderboard.component.scss
+++ b/frontend/src/app/tournament/leaderboard/leaderboard.component.scss
@@ -189,11 +189,6 @@ table.leaderboard-table {
   .leaderboard-container {
     padding: 1rem;
     margin: 1rem auto;
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    overflow-y: auto;
-    -webkit-overflow-scrolling: touch;
   }
 
   .controls {
@@ -209,7 +204,6 @@ table.leaderboard-table {
     overflow-x: auto;
     -webkit-overflow-scrolling: touch;
     margin-top: 20px;
-    flex: 1;
   }
 
   table.leaderboard-table {
